# careeros

./: .gitignore  AGENTS.md  AGENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
careeros/: __init__.py  budget.py  cache.py  cli.py  config.py  drive.py  lint.py  models.py  pdf.py  report.py  runmeta.py  sheets.py  typst_render.py
careeros/apply/: __init__.py  browser.py
careeros/cli/: __init__.py  __main__.py  _shared.py  apply_stage.py  artifacts.py  discover.py  doctor.py  drive.py  gate_evaluate.py  lint_verify.py  perjob.py  pipeline.py  reports.py  setup.py  sheets_cmds.py  stubs.py
careeros/pipeline/: constraints.py  dedupe.py  normalize.py  queryplan.py  threshold.py
careeros/providers/: README.md  _apify_actor_common.py  _apify_common.py  base.py  fantastic_jobs.py  foundit.py  glassdoor.py  indeed.py  naukri.py  registry.py  remoteok.py  we_work_remotely.py  ziprecruiter.py
careeros/providers/legacy/: fantastic_jobs_actor.py
careeros/templates/: cover.typ  resume.typ
careeros/tests/: conftest.py  test_apify_actor_common.py  test_apply_browser.py  test_backfill_drive.py  test_budget.py  test_budget_apify.py  test_cache.py  test_cli_apply_stage.py  test_cli_artifacts_v2.py  test_cli_discover_multi_provider.py  test_cli_discovery_stats.py  test_cli_evaluate_cache.py  test_cli_evaluate_score_clamp.py  test_cli_publish.py  test_cli_sheets_append.py  test_cli_summary_results.py  test_cli_version.py  test_config_migration.py  test_constraints.py  test_dedupe.py  test_discover_quota_aware_limit.py  test_doctor.py  test_doctor_live.py  test_drive.py  test_lint.py  test_pdf.py  test_provider_fantastic_jobs.py  test_provider_fantastic_jobs_actor.py  test_provider_fantastic_jobs_errors.py  test_provider_fantastic_jobs_parity.py  test_provider_foundit.py  test_provider_glassdoor.py  test_provider_indeed.py  test_provider_naukri.py  test_provider_remoteok.py  test_provider_we_work_remotely.py  test_provider_ziprecruiter.py  test_queryplan.py  test_report.py  test_runmeta.py  (+3 more)
careeros/tests/fixtures/: apply_form.html  sample_raw.json
docs/: google-setup.md
prompts/: apply_v1.md  cover_v1.md  deep_report_v1.md  eval_v1.md  eval_v2.md  gate_v1.md  resume_v1.md  resume_v2.md  voice-dna.md
schemas/: eval.schema.json  job.schema.json  profile.schema.json  resume.schema.json
skills/: apply.md  daily.md  job.md  prep.md  start.md
templates/: config.example.yaml  profile.example.yaml
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  vercel.json
website/public/: llms.txt  robots.txt
website/public/media/: apply-honest.webm  gate-parallel.webm  hero-pipeline.webm  pipeline-start.webm  resume-cover.webm
website/scripts/: cut-media.sh
website/src/components/: ArchitectureDiagram.tsx
website/src/components/home/: Hero.astro
website/src/components/site/: DocsSidebar.astro  Footer.astro  Head.astro  Header.astro  Logo.astro  MobileNav.tsx  StructuredData.astro  ThemeScript.astro
website/src/components/ui/: Badge.astro  Button.astro  CommandBlock.tsx  GitHubLink.astro  Section.astro  ThemeToggle.tsx  VideoDemo.tsx
website/src/layouts/: BaseLayout.astro  DocsLayout.astro
website/src/lib/: decisions.ts  pipeline.ts  site.ts
website/src/pages/: architecture.astro  comparison.astro  index.astro  open-source.astro  philosophy.astro  product-decisions.astro  roadmap.astro
website/src/pages/docs/: architecture.astro  commands.astro  configuration.astro  contributing.astro  developer-guide.astro  examples.astro  index.astro  installation.astro  quick-start.astro  roadmap.astro
website/src/styles/: global.css
